--- a/text/长文1.md
+++ b/text/长文1.md
@@ -1,4 +1,294 @@
+3 月 4 日特朗普将在国会联席会议上发表演讲，这一举动释放了哪些信号？
 
+尊敬的约翰逊议长、万斯副总统、美国第一夫人，以及美国国会议员们，感谢你们的出席。
+
+六周前，我站在国会大厦的穹顶下，宣告了美国黄金时代的到来。自那以后，我们迅速而坚定地采取行动，迎来了我国历史上最伟大、最成功的时代。我们在 43 天内取得的成就，比大多数政府在四年或八年内取得的成就还要多——而这才刚刚开始。谢谢大家。
+
+今晚，我回到这个会场，向大家报告，美国的势头又回来了。我们的精神又回来了。我们的骄傲又回来了。我们的信心又回来了。美国梦正在高涨——比以往任何时候都更伟大、更美好。美国梦势不可挡，我们的国家即将迎来世界从未见过、也许永远不会再见到的复兴。从来没有过这样的事情。
+
+11 月 5 日的总统选举是几十年来前所未有的胜利。我们赢得了所有七个摇摆州，以 312 票的优势赢得了选举人团选举。
+
+我们以绝对优势赢得了普选，并赢得了我们国家的各个县——
+
+在共和党几乎完全占据优势的地图上，共和党以 2,700 比 525 的票数赢得了我国的多个县。现在，现代历史上第一次有更多美国人相信我们的国家正朝着正确的方向前进，而不是朝着错误的方向前进。事实上，这是一个惊人的记录：27 个百分点的摇摆，是有史以来最大的。
+
+（德克萨斯州民主党众议员艾尔·格林打断了特朗普总统的讲话，接着被赶出。）
+
+同样，小企业乐观情绪也出现了有史以来最大的单月增幅，跃升了 41 个百分点。
+
+（路易斯安那州共和党众议员、众议院议长迈克·约翰逊：议员们被要求维护和维持议会礼仪，并停止任何进一步的扰乱。这是对你们的警告。议员们正在故意和持续违反礼仪，主席准备指示警卫恢复联席会议秩序。）
+
+
+谢谢。在过去的六个星期里，我签署了近 100 项行政命令，并采取了 400 多项行政行动，这创下了在我们这片美丽土地上恢复常识、安全、乐观和财富的记录。人民选举我来做这项工作，我正在做这件事。
+
+事实上，许多人都表示，我们总统任期的第一个月——这是我们总统任期的第一个月——是我们国家历史上最成功的一个月。许多人都这么认为。
+
+更令人印象深刻的是，你知道第二名是谁吗？乔治·华盛顿。怎么样？怎么样？我不知道这个名单，但是。但我们会接受的。在宣誓就职几个小时后，我宣布南部边境进入国家紧急状态。我部署了美国军队和边境巡逻队来击退对我们国家的入侵。他们做得真好。结果，上个月非法越境的人数是有史以来最低的。
+
+他们听了我的话，选择不来。这样就容易多了。相比之下，在美国历史上最糟糕的总统乔·拜登的领导下，每月有数十万非法越境者，几乎所有人，包括杀人犯、毒贩、帮派成员以及来自精神病院和疯人院的人，都被释放到我们国家。谁会想这样做呢？
+
+这是我第五次向国会发表这样的演讲，我再次看着面前的民主党人，我意识到我说什么都不能让他们高兴，让他们起立、微笑或鼓掌。我什么也做不了。我可以找到一种治疗最具破坏性的疾病的方法，这种疾病可能会消灭整个国家，或者宣布实现历史上最伟大的经济，或者将犯罪率降至有史以来最低水平，而坐在这里的这些人不会鼓掌，不会起立，当然也不会为这些天文数字般的成就欢呼。不管怎样，他们都不会这么做。我已经来这里五、五次了。这很可悲。事情不应该这样。
+
+所以，坐在我面前的民主党人，就在这一晚，为什么不和我们一起庆祝美国取得的这么多令人难以置信的胜利呢？为了国家的利益，让我们共同努力，真正让美国再次伟大。
+
+我的政府每天都在努力实现美国需要的变革，以实现美国应有的未来，我们正在这样做。这是一个实现远大梦想和采取大胆行动的时代。上任后，我立即冻结了所有联邦招聘、冻结所有新的联邦法规并冻结了所有对外援助。
+
+我终止了荒谬的“绿色新骗局”。我退出了不公平的巴黎气候协定，该协定花费了我们数万亿美元，而其他国家却没有支付。我退出了腐败的世界卫生组织。我还退出了反美的联合国人权理事会。我们结束了拜登的所有环境限制，这些限制使我们的国家变得更加不安全，生活成本完全无法承受。更重要的是，我们结束了上届政府疯狂的电动汽车强制令，使我们的汽车工人和公司免于经济毁灭。
+
+为了解放我们的经济，我指示，每制定一项新法规，就必须废除十条旧法规——就像我在非常成功的第一个任期内所做的那样。
+
+在第一任期内，我们创下了结束不必要的规则和法规的记录，这是其他总统从未做过的。我们命令所有联邦工作人员返回办公室。他们要么亲自上班，要么被解雇。我们还结束了武器化的政府，例如，现任总统可以恶毒地起诉他的政治对手，比如我。结果如何？不太好。不太好。
+
+我停止了所有政府审查，恢复了美国的言论自由。言论自由回来了。两天前，我签署了一项命令，将英语定为美国的官方语言。我将墨西哥湾改名为美国湾。同样，我再次将麦金利山改名为伟大的总统威廉·麦金利。美丽的阿拉斯加，我们爱阿拉斯加。我们爱阿拉斯加。
+
+我们结束了整个联邦政府中所谓的多样性、公平和包容政策的暴政。私营部门和军队也是如此。我们的国家将不再觉醒。我们认为，无论您是医生、会计师、律师还是空中交通管制员，您都应该根据技能和能力而不是种族或性别来获得聘用和晋升。这非常重要。您应该根据功绩获得聘用。最高法院做出了一个勇敢而有力的决定，允许我们这样做。谢谢。非常感谢。谢谢。
+
+我们已经从公立学校中清除了种族批判理论的毒害，我签署了一项命令，将性别只有两种：男性和女性作为美国政府的官方政策。我还签署了一项行政命令，禁止男性参加女子体育运动。
+
+三年前，佩顿·麦克纳布是一名全明星高中运动员，是最优秀的运动员之一，她正在为大学体育事业做准备。但是，当她参加的女子排球比赛被一名男子闯入时，他猛烈地将球砸在佩顿的脸上，导致她脑部受伤，右侧部分瘫痪，结束了她的运动生涯。这是她从未见过的击球。她从未见过这样的事情。佩顿今晚来到了观众席，佩顿，从现在起，学校将把这些男人从女子队中除名，否则他们将失去所有联邦资助。
+
+如果你真的想看数字，只要看看女子拳击、举重、田径、游泳或自行车项目上发生的事情，最近一名男子在一场长距离比赛中比一名女子快 5 小时 14 分钟，创造了新纪录，比女子快 5 小时 14 分钟。这对女性来说是一种侮辱，对我们的国家来说也非常糟糕。我们不会再忍受这种事情了。
+
+我刚才描述的只是常识革命的一小部分，这场革命现在正因为我们而席卷整个世界。常识已经成为一个共同的主题，我们永远不会后退，永远不会让这种情况发生。我的首要任务之一是拯救我们的经济，并为工薪家庭提供戏剧性和即时的救济。如你所知，我们从上届政府那里继承了一场经济灾难和通货膨胀噩梦。
+
+他们的政策推高了能源价格，推高了食品成本，使数百万美国人的生活必需品无法负担。他们从未经历过这样的事情。我们遭受了 48 年来最严重的通货膨胀。但也许即使在我们国家的历史上，他们也不确定。作为总统，我每天都在努力扭转这种损害，让美国再次负担得起生活费用。
+
+乔·拜登尤其让鸡蛋价格失控。鸡蛋价格失控了。我们正在努力让它降下来。部长，好好做这件事吧——你从上届政府那里继承了一片混乱。好好做吧。我们战胜通胀的一大重点是迅速降低能源成本。上届政府将新的石油和天然气租赁数量削减了 95%，放缓了管道建设速度，并关闭了 100 多座发电厂——我们现在正在开放许多这样的发电厂。
+
+坦白说，我们从未见过这样的情况。这就是为什么我在上任第一天就宣布国家能源紧急状态。正如你们多次听我说过的那样，我们脚下的“液体黄金”比地球上任何一个国家都多，而且远远多得多，现在我完全授权有史以来最有才华的团队去开采它。这就是所谓的“钻探，宝贝，钻探”。
+
+我的政府还在阿拉斯加修建一条巨大的天然气管道，这是世界上最大的天然气管道之一，日本、韩国和其他国家都希望成为我们的合作伙伴，各自投资数万亿美元。这是前所未有的。这将是真正壮观的。一切都准备就绪。许可已经获得。
+
+
+本周晚些时候，我将采取一项历史性举措，大幅提升美国关键矿产和稀土资源的生产能力。
+
+为了进一步抑制通货膨胀，我们不仅要降低能源成本，还必须杜绝对纳税人资金的公然浪费。为此，我成立了全新的政府效率部（DOGE）——也许你们已经听说过。该部门由伊隆·马斯克领导，他今晚也在座。
+
+谢谢你，伊隆。 你工作努力、才华横溢，而你完全可以选择不做这一切。你的奉献令人敬佩，我们对此深表感激。我相信，就连我们这一边的议员们——即便他们不愿承认——也同样感谢你的努力。
+
+现在，让我们看看我们已经发现的一些令人震惊的资金浪费案例：
+
+卫生与公众服务部拨款220亿美元为非法移民提供免费住房和车辆；
+
+4500万美元被用于资助缅甸的多元化、公平和包容性奖学金；
+
+4000万美元用于促进定居移民的社会和经济融合（至今无人能准确解释其具体用途）；
+
+800万美元被用来在非洲国家莱索托推广LGBTQI+议题——一个许多人可能从未听说过的国家；
+
+6000万美元被投向中美洲土著人民和加勒比非洲裔群体的赋权计划；
+
+800万美元用于实验性动物的性别转换——是的，你没听错，这是真的；
+
+3200万美元用于摩尔多瓦的左翼宣传活动；
+
+1000万美元用于莫桑比克的男性割礼项目；
+
+2000万美元用于资助中东版《芝麻街》——是的，这确实是一个正式的联邦项目；
+
+1.9亿美元流向了新成立的“房屋脱碳委员会”，最终，这笔资金被转入一位名叫斯泰西·艾布拉姆斯（Stacey Abrams）的个人账户——你们应该听说过她。
+
+这仅仅是我们发现的冰山一角。还有更多令人震惊的案例，但现在或许不是细谈的时候。值得庆幸的是，我们已经建立了一支由一批聪明、年轻且充满干劲的专业人士组成的团队，在伊隆的领导下，他们正快速揭露并制止这些欺诈行为。数千亿美元的资金已被追回，我们将用这些资金减少债务、对抗通胀、降低抵押贷款利率、降低汽车和食品成本，并确保老年人的社会保障不被掠夺。
+
+我们来得正是时候。 这仅仅是一个开始。
+
+根据联邦政府问责局的数据，美国每年因欺诈行为损失的资金超过5000亿美元，这是不可接受的。我们正在采取坚决措施阻止这一切，我们会做到。
+
+更令人震惊的是，我们在社会保障体系中也发现了巨大的管理失误，甚至可能存在欺诈行为——这直接影响到数百万依赖社会保障的老年人和家庭。
+
+你们相信吗？政府数据库显示，美国现有470万人的社会保障登记年龄在100至109岁之间；360万人年龄在110至119岁之间；347万人年龄在120至129岁之间；390万人年龄在130至139岁之间；350万人年龄在140至149岁之间。这些人中，许多仍在领取养老金，而我们现在正加紧调查。我们要找出这些资金的流向，并确保正义得到伸张。
+
+此外，数据库甚至显示，美国有130万人年龄在150至159岁之间，13万人超过160岁。更离谱的是，还有1039人年龄在220至229岁之间，甚至一位登记在册的社会保障领取者年龄达到360岁——比我们国家的历史还要长！
+
+毫无疑问，我们的国家比我想象的更长寿，但社会保障资金的不当发放，直接损害了数百万依赖该系统的老年人和工薪家庭。我们将坚决追查到底。
+
+今天，利率出现了漂亮的下降，漂亮的大幅下降——是时候了。在不久的将来，我想做一件 24 年来从未做过的事：平衡联邦预算。我们将实现平衡。为了实现这一目标，我们详细制定了所谓的金卡，很快就会开始销售。只需 500 万美元，来自世界各地的最成功的创造就业机会的人就可以购买获得美国公民身份的途径。
+
+这就像绿卡，但更好更复杂。这些人必须在我们国家纳税。他们不必在他们来的地方纳税。他们赚的钱，你不会想这样做。但他们必须纳税，创造就业机会。他们还会把人们从大学里带出来，并为他们支付费用，这样我们就可以把他们留在我们国家，而不是让他们被迫离开。例如，顶尖学校的排名第一的学生被迫离开，不允许他们留下来，为那里的公司创造大量就业机会和巨大成功。
+
+因此，当我们把那些在民主党、拜登政府的开放边境政策下被允许进入我国的罪犯、杀手、贩运者和儿童性侵犯者驱逐出去时——你们允许这些开放边境的疯狂政策摧毁我们的国家——我们现在将引进才华横溢、勤奋工作、创造就业机会的人才。他们将支付一大笔钱，我们将用这些钱来减少我们的债务。
+
+美国人民赋予我们进行大胆而深刻变革的使命。近 100 年来，联邦官僚机构不断壮大，最终扼杀了我们的自由，扩大了我们的赤字，并在各个方面阻碍了美国的潜力。这个由先驱者和冒险家创立的国家现在被数以百万计的法规和债务所淹没：本来应该 10 天就能拿到的批准，却要花 10 年、15 年甚至 20 年才会被拒绝。
+
+与此同时，我们有数十万联邦工作人员没有来上班。我的政府将从这个不负责任的官僚机构手中夺回权力，我们将再次让美国恢复真正的民主。
+
+任何抵制这一变革的联邦官僚都将立即被免职。因为我们正在清理沼泽。这很简单。非民选官僚统治的时代已经结束。
+
+我们实现史上最佳经济的计划的下一阶段是让国会通过对所有人减税的法案。减税法案已经在那里了，等着你们投票。我相信我右翼的人们，我不是说共和党右翼，而是我右翼——就在这里——我相信你们会投票支持减税法案，否则我相信人们不会投票给你。所以我告诉你这个是帮了你一个大忙。但我知道这个群体会投票支持减税法案。
+
+谢谢。这是我们计划中非常重要的一部分。我们在第一任期内取得了巨大的成功，我们计划中非常重要的一部分就是寻求全面永久减税。为了给那些受通货膨胀打击特别严重的美国人提供急需的救济，我呼吁对小费免税、对加班免税、对我们优秀的老年人的社会保障福利免税。
+
+我还想让汽车贷款利息可以免税——但前提是汽车是在美国制造的。顺便说一句，汽车行业将迎来前所未有的增长。工厂在各地开张。交易正在达成——这是前所未见的。这是选举胜利和关税的结合。这是一个美丽的词，不是吗？
+
+这项政策和我们的其他政策将使我们的汽车行业绝对繁荣。它将会繁荣。今天我采访了三位大人物，他们都非常兴奋。事实上，许多汽车公司已经宣布他们将在美国建造大型汽车厂，本田刚刚宣布将在印第安纳州建造一座新工厂，这将是世界上最大的工厂之一。这是自 11 月 5 日我们取得伟大胜利以来发生的，希望这一天能成为我国历史上最重要的日子之一。
+
+此外，作为减税政策的一部分，我们希望削减国内生产和所有制造业的税收。就像我们以前所做的那样，我们将提供 100% 的费用化。它将追溯到 2025 年 1 月 20 日。这也是我们的减税政策在第一任期内如此成功的主要原因之一，它为我们带来了我国历史上最成功的经济。第一任期，我们有一个伟大的第一任期。
+
+然而，在特朗普政府的领导下，如果你不在美国生产产品，你就要支付关税，在某些情况下，关税会相当高。几十年来，其他国家一直对我们征收关税，现在轮到我们开始对其他国家征收关税了。平均而言，欧盟、中国、巴西、印度、墨西哥和加拿大——你听说过吗？无数其他国家向我们征收的关税比我们向它们征收的关税高得多。
+
+这非常不公平。印度向我们征收的汽车关税超过 100%。中国对我们产品的平均关税是我们征收的两倍。韩国的平均关税是我们的四倍。想想看。四倍。我们在军事和其他许多方面向韩国提供了如此多的帮助。但这就是发生的事情。这是朋友和敌人之间发生的事情。
+
+这一制度对美国不公平，而且从来就不公平，所以 4 月 2 日——我想把它定在 4 月 1 日，但我不想被指责为愚人节——它不是——它只是让我们损失很多钱的一天。但我们打算在 4 月这样做。我是一个非常迷信的人。4 月 2 日，互惠关税开始生效，无论其他国家对我们征收什么关税，我们都会对他们征收关税。这是互惠的，来来回回。
+
+他们对我们征什么税，我们就对他们征什么税。如果他们用非货币关税把我们挡在他们的市场之外，那我们就会用非货币壁垒把他们挡在我们的市场之外。这样的情况还有很多。他们甚至不允许我们进入他们的市场。我们将获得数万亿美元，创造前所未有的就业机会。我对中国这样做过，对其他国家也这样做过，而拜登政府对此无能为力，因为钱太多了，他们无能为力。几十年来，几乎每个国家都在欺骗我们，我们不会再让这种情况发生。
+
+过去三个月，关于墨西哥和加拿大的讨论很多。但我们与这两个国家都存在巨大的贸易赤字。但更重要的是，他们允许芬太尼以前所未有的规模进入我国，杀死了数十万我国公民和许多非常年轻、美丽的人，摧毁了家庭。没有人见过这样的事情。他们实际上获得了数千亿美元的补贴。我们向加拿大和墨西哥支付了数千亿美元的补贴。美国不会再这样做了。我们不会再这样做了。
+
+由于我们实施的“美国优先”政策，仅在过去几周，我们就在美国获得了 1.7 万亿美元的新投资。选举和我们的经济政策相结合，软银（世界上最聪明的公司之一）宣布了 2000 亿美元的投资。OpenAI 和甲骨文的拉里·埃里森宣布了 5000 亿美元的投资，如果卡马拉获胜，他们就不会这么做。
+
+苹果宣布投资 5000 亿美元。蒂姆·库克给我打了电话。他说：我怎么花都不够快。我相信会比这个数字高得多。他们将在这里而不是中国建厂。就在昨天，全球最大、最强大的台湾半导体公司，占据了 97% 的市场份额，宣布投资 1650 亿美元，在美国制造世界上最强大的芯片
+
+我们不会给他们任何钱。你们的《芯片保护与信息系统法案》太可怕了。我们给了数千亿美元，却毫无意义。他们拿了我们的钱却不花。对他们来说，这一切意味着——我们没有给他们钱——对他们来说，唯一重要的是他们不想支付关税，所以他们来了，正在建设，许多其他公司也来了。
+
+我们不必给他们钱；我们只想保护我们的企业和我们的人民，他们会来的，因为如果他们在美国建厂，他们就不必支付关税。这感觉太棒了。议长先生，你应该废除《芯片投资保护法案》，剩下的钱你应该用它来减少债务。或者出于任何你想要的原因。
+
+我们的新贸易政策对美国农民来说也是一件好事——我爱农民——他们现在将把产品销往我们的本土市场，美国，因为没有人能够与你们竞争。因为从其他国家和公司进口的那些商品在很多方面都处于非常非常不利的地位。
+
+它们未经检查，进口时可能非常肮脏和恶心，它们大量涌入，伤害了我们的美国农民。关税将继续——从 4 月 2 日开始，农产品进入美国和我们的农民可能需要一点调整期。我之前与中国达成协议时就遇到过这种情况。500 亿美元的采购，我说只要忍耐我，他们就忍耐了。他们做到了。可能不得不再次忍耐我。这会更好。那太好了。问题是拜登没有执行它。他没有执行它。
+
+500 亿美元的采购，我们做得很好，但拜登没有执行，这伤害了我们的农民。但我们的农民现在会过得很开心。所以对我们的农民来说，玩得开心。我也爱你们。我也爱你们。
+
+我还对外国铝、铜、木材和钢铁征收了 25% 的关税，因为如果我们没有钢铁和其他很多东西，我们就没有军队，坦率地说，我们不会拥有——我们不会长期拥有一个国家。今天在座的是一位自豪的美国钢铁工人。一个了不起的人。来自阿拉巴马州迪凯特的杰夫·德纳德在同一家钢铁厂工作了 27 年，这份工作让他担任当地志愿消防队的队长。
+
+与他美丽的妻子 Nicole 养育了七个孩子，多年来为 40 多名寄养儿童提供了温馨的家。干得真好。谢谢你。谢谢你，杰夫。
+
+杰夫的故事提醒我们，关税不仅仅是为了保护美国的就业。它是为了保护我们国家的灵魂。关税是为了让美国再次富裕，让美国再次伟大，而这正在发生，而且很快就会发生。会有一些干扰，但我们可以接受。不会有太大影响。不，你不会。
+
+看看拜登带我们去的地方。非常低迷，这是我们有史以来的最低谷。杰夫，我非常感谢你，我也想表扬另一位致力于寄养、社区的人，她为此付出了很多努力。非常有爱心的人，我们伟大的美国第一夫人。
+
+梅拉尼娅的工作取得了令人难以置信的成果，帮助我们国家未来的领导人做好进入职场的准备。除了第一夫人之外，还有两位令人印象深刻的年轻女性，非常令人印象深刻，海莉·弗格森受益于第一夫人的“培育未来”计划，她即将完成学业并成为一名教师。还有埃利斯顿·贝瑞，她成为了同龄人制作的非法深度伪造图像的受害者。在埃利斯顿的帮助下，参议院刚刚通过了“删除法案”。
+
+这非常重要，非常感谢，约翰。谢谢你，约翰·图恩。站起来，约翰。谢谢你，约翰。非常感谢大家。谢谢你们。感谢约翰·图恩和参议院。干得好。将在线发布此类图片合法化是一件非常非常糟糕的事情。一旦该法案在众议院获得通过，我期待签署该法案成为法律。谢谢你们。如果你不介意的话，我也将使用该法案，因为没有人在网上受到比我更糟糕的待遇，没有人。太好了。非常感谢参议院，谢谢你们。
+
+但如果我们真的关心保护美国儿童，那么没有什么比确保美国边境安全更重要。在过去四年中，有 2100 万人涌入美国——其中许多人是来自世界各地危险城市街头的杀人犯、人口贩子、帮派成员和其他罪犯。由于乔·拜登疯狂且非常危险的开放边境政策，他们现在已深深扎根于我们的国家。但我们正在把他们赶出去，而且要迅速把他们赶出去。
+
+我要感谢汤姆·霍曼和克里斯蒂，我要感谢你，还有边境巡逻队的保罗。我要感谢你们。他们所做的工作真是太棒了——每个人，边境巡逻队、移民与海关执法局、执法部门总体来说都很棒，我们必须照顾好我们的执法部门。我们必须这样做。
+
+去年，一位才华横溢的 22 岁护理专业学生莱肯·莱利 (Laken Riley) 在佐治亚大学校园里慢跑，她是班上最优秀的学生，受到所有人的钦佩。那天早上，莱肯遭到了恶毒的攻击、殴打、虐待和残忍的杀害。
+
+莱肯被一名野蛮的非法移民团伙成员从我们身边夺走，这名成员在非法越过拜登开放的南部边境时被捕，然后在那届失败政府的无情政策下被放逐到美国。那确实是一届失败的政府。随后，他在一个民主党管理的庇护城市被捕并被释放，这是一场灾难，然后他结束了这位美丽的年轻天使的生命。
+
+今晚与我们同在的是莱肯深爱的母亲艾莉森和她的姐姐劳伦。去年，我告诉莱肯悲痛的父母，我们会确保他们的女儿不会白白死去。这就是为什么我作为第 47 任总统签署的第一项法案要求拘留所有威胁公共安全的危险外国罪犯。这是一项非常有力的法案。它被称为莱肯·莱利法案。所以，艾莉森和劳伦，美国永远不会忘记我们美丽的莱肯·霍普·莱利。非常感谢你们。
+
+自上任以来，我的政府发起了美国历史上最全面的边境和移民打击行动，我们很快就实现了非法越境人数有史以来最低的纪录。谢谢。媒体和我们民主党的朋友一直说我们需要新的立法，我们必须有立法来保障边境安全。但事实证明，我们真正需要的只是一位新总统。
+
+谢谢。乔·拜登不仅开放了我们的边境，还让非法移民飞越边境，占领了我们全国各地的学校、医院和社区。科罗拉多州奥罗拉和俄亥俄州斯普林菲尔德等整个城镇都因移民占领和腐败而崩溃，这是前所未有的。美丽的城镇被毁了。
+
+正如我在就职演说中所承诺的，我们正在实现美国的伟大解放。但还有许多工作要做。今晚，我认识了一位女士，来自休斯顿的亚历克西斯·努加雷，她是一位了不起的女性。去年，亚历克西斯 12 岁的女儿，她的宝贝乔斯琳，走到附近的一家便利店。她被绑架、绑架，在桥下遭到殴打长达两个小时，最后惨遭杀害。两名来自委内瑞拉的非法移民被逮捕并被指控犯有这一令人发指的罪行，上届政府通过他们荒谬的开放边境将他们释放到美国。
+
+这位美丽的 12 岁女孩的去世以及她母亲和家人的悲痛深深地触动了我们整个国家。亚历克西斯，我保证我们会永远记住你的女儿，你是一个了不起的女儿，今晚早些时候我签署了一份命令，信守我对你的诺言。我对乔斯林的了解之一是她非常喜欢动物，她热爱大自然。
+
+从乔斯琳居住的休斯顿穿过加尔维斯顿湾，你会发现一个宏伟的国家野生动物保护区，这是美国湾边缘一个原始、宁静的 34,000 英亩的避难所，是上帝创造的所有生物的庇护所。亚历克西斯，刚才我正式将这个保护区重新命名为乔斯琳，以纪念你美丽的女儿。所以，副总统先生，如果您愿意的话，我可以下达命令吗？
+
+非常感谢。被指控谋杀乔斯林和拉肯的三名凶手都是委内瑞拉监狱帮派的成员，他们称该帮派是世界上最厉害的帮派，被称为 Tren de Aragua。两周前，我正式将该帮派以及 MS-13 和嗜血的墨西哥贩毒集团列为外国恐怖组织。
+
+他们现在正式被归类为 ISIS，这对他们来说不是好事。拜登政府欢迎成千上万的恐怖分子进入美国。但现在，他们将被全部围捕并强行驱逐出境，或者如果他们太危险，就被关进监狱，在美国接受审判，因为我们不希望他们再回来。今晚与我们一起的是这场战斗前线的一名战士，边境巡逻队特工罗伯托·奥尔蒂斯。他是个好人。
+
+今年 1 月，罗伯托和另一名特工在格兰德河附近一个叫做卡特尔岛的地方巡逻——这听起来不太好。当全副武装的枪手开始向他们射击时，罗伯托看到他的搭档完全暴露在极大的危险之中，他立即采取行动，还击，为他的同事寻求安全提供了关键的几秒钟——勉强。
+
+我有一些那次事件的录像，但那次事件并不好。奥尔蒂斯探员，我们向你致敬，因为你有非凡的勇气，你敢于直面危险，你表现出的勇气。我们尊敬你，我们将永远尊敬你，非常感谢你，罗伯托。
+
+谢谢你，罗伯托。事实上，我在多次打电话到边境时认识了他。他是一位非常非常绅士。我们边境以南的地区现在完全被犯罪集团控制，他们谋杀、强奸、折磨并实施全面控制。他们完全控制了整个国家，对我们的国家安全构成了严重威胁。
+
+卡特尔组织正在美国发动战争，现在是美国向卡特尔组织发动战争的时候了，我们正在这样做。
+
+五天前，墨西哥当局因为我们的关税政策而将该国 29 个最大的贩毒集团头目交给了我们。这是前所未有的。他们想让我们高兴。这是第一次。但我们需要墨西哥和加拿大做得更多，他们必须阻止芬太尼和毒品流入美国
+
+他们会阻止的。我已向国会提交了一份详细的资金申请，详细说明了我们将如何消除这些威胁，保护我们的国土，并完成美国历史上最大规模的驱逐行动，规模甚至超过了现任纪录保持者德怀特·艾森豪威尔总统，他是一个温和派人士，但非常相信边界问题。美国人希望国会能立即向我提供这笔资金，以便我将其签署成为法律。所以议长先生，约翰·图恩，你们两位，我希望你们都能做到这一点。议长先生，谢谢您。领袖先生，谢谢您。非常感谢。让我们把它交给我。我会很快签署，你甚至不会相信。
+
+在我们恢复主权的同时，我们还必须恢复城市和乡镇的法律和秩序。近年来，我们的司法系统被激进的左翼疯子搞得天翻地覆。许多司法管辖区实际上停止了对危险的惯犯执法，同时将执法武器化，对付像我这样的政治对手。我的政府迅速果断地采取行动，在宪法法治下恢复公正、平等和公平的司法，从联邦调查局和司法部开始，帕姆，祝你好运。卡什，无论你在哪里，祝你好运。祝你好运。帕姆·邦迪，祝你好运。这很重要。你会做得很好的。卡什，谢谢你。谢谢你，卡什。
+
+他们已经取得了很大的进步。他们将会出色地完成工作。你们会为他们感到骄傲。我们也将再次给予我们的警察他们应得的支持、保护和尊重。他们必须得到这些。他们的工作非常艰苦、危险，但我们会让他们的工作不那么危险。问题是坏人不尊重法律，但他们开始尊重法律，很快就会受到尊重。这也包括我们全国各地的优秀消防部门；我们的消防员们都是了不起的人，我们永远不会忘记他们。除此之外，他们以创纪录的人数投票给我，所以我别无选择。
+
+一年前的这个月，31 岁的纽约警察乔纳森·迪勒在长岛的一个交通站被枪杀，他是一个令人难以置信的好人，也是一名优秀的警察。我参加了他的葬礼。被控谋杀的凶手曾被捕 21 次，而且都是粗暴的逮捕。他是个真正的坏人。坐在他旁边的暴徒曾被捕 14 次，自称“杀手”。他就是“杀手”。他杀了其他人；他们说杀了很多人。我参加了迪勒警官的葬礼，当我见到他的妻子和一岁的儿子瑞恩时，我真的很受鼓舞。他的遗孀名叫斯蒂芬妮，她今晚也在这里。斯蒂芬妮，非常感谢你。斯蒂芬妮，谢谢你。
+
+斯蒂芬妮，我们要让瑞恩知道，他的父亲是一位真正的英雄，是纽约最优秀的英雄。我们要将这些冷血杀手和惯犯从我们的街道上赶走，我们要迅速采取行动。必须制止这种行为。他们逮捕了 28 人，把人推上地铁。他们用棒球棒击打人们的头部和后脑勺。我们必须把他们赶出去。我已经签署了一项行政命令，要求对任何谋杀警察的人处以死刑，今晚我将要求国会将这项政策通过为永久法律。
+
+我还要求制定一项新的犯罪法案，对惯犯采取严厉措施，同时加强对美国警察的保护，使他们能够履行职责，而不必担心自己的生活被彻底摧毁。他们不想被杀。我们不会让他们被杀。今晚与我们一起在画廊的是一位真正热爱我们警察的年轻人。他的名字叫 DJ Daniel，他今年 13 岁，一直梦想成为一名警察。但在 2018 年，DJ 被诊断出患有脑癌。医生说他最多只能活五个月。那是六年多前的事了。
+
+从那时起，DJ 和他的父亲就一直在努力实现他的梦想，DJ 已经多次宣誓成为一名荣誉执法人员。警察爱他。警察局也爱他。今晚，DJ，我们将给予你最大的荣誉。我请求我们的新特勤局局长肖恩·柯伦正式任命你为美国特勤局特工。
+
+谢谢你，DJ。DJ 的医生认为他的癌症很可能是他小时候接触到的化学物质引起的。自 1975 年以来，儿童癌症发病率上升了 40% 以上。扭转这一趋势是我们新成立的总统委员会“让美国再次健康”的首要任务之一，该委员会由新任卫生与公众服务部长罗伯特·F·肯尼迪 (Robert F. Kennedy Jr.) 担任主席。听到肯尼迪这个名字，你会以为这里的每个人都会欢呼雀跃。他们忘得真快！
+
+我们的目标是清除环境中的毒素、食物供应中的毒物，让我们的孩子健康强壮。举个例子，不久前，你甚至不敢相信这些数字，每 10,000 个孩子中就有一个患有自闭症。每 10,000 个孩子中就有一个。而现在是每 36 个孩子中就有一个。这肯定是不对劲的。每 36 个孩子中就有一个。想想看。所以我们要找出问题所在，没有人比 Bobby 和所有与你一起工作的人更合适。你最有能力弄清楚到底发生了什么。好的，Bobby，祝你好运。这是一份非常重要的工作。谢谢你。谢谢你。
+
+我的政府也在努力保护我们的孩子免受学校有害意识形态的影响。几年前，January Littlejohn 和她的丈夫发现他们女儿的学校秘密地对他们 13 岁的小女孩进行了社会转型，教师和管理人员合谋欺骗 January 和她的丈夫，同时鼓励她的女儿使用新的名字和代词。实际上是他们/他们的代词。所有这些都没有告诉 January，它今晚就在这里，现在是反对这种虐待儿童形式的勇敢倡导者。January，谢谢你。
+
+非常感谢。谢谢。正是因为这样的故事，我上任后不久就签署了一项行政命令，禁止公立学校向我们的孩子灌输跨性别思想。
+
+我还签署了一项命令，切断所有参与对青少年进行性残害的机构的纳税人资金。现在，我希望国会通过一项法案，永久禁止和将儿童变性定为犯罪，并永远终结任何孩子被困在错误的身体里的谎言。这是一个弥天大谎。我们要告诉美国每一个孩子，你们都是完美的，就像上帝创造你们一样。
+
+因为我们正在将觉醒从学校和军队中驱除出去，这种觉醒已经消失，也从我们的社会中消失了，我们不想看到这种觉醒。觉醒是麻烦，是坏事，觉醒已经消失了。觉醒已经消失了。我们感觉好多了，不是吗？我们感觉不是更好吗？
+
+我们的军人不会是激进分子和空想家，他们会是战士和勇士，他们会为我们的国家而战，皮特，恭喜你。国防部长。恭喜你。
+
+我可以告诉你，他对觉醒运动不太感兴趣。我很了解他。我很高兴地向大家报告，今年 1 月，美国陆军迎来了 15 年来最好的招募月。所有武装部队都取得了有史以来最好的招募成绩。真是天壤之别。
+
+你知道，就在几个月前，结果却截然相反。我们无法在任何地方招募新兵，我们无法招募新兵。现在我们取得了最好的成绩——几乎是我们有史以来最好的成绩。这是一个多么巨大的转变。这真是一件美好的事情。人们再次爱上我们的国家，这很简单。他们爱我们的国家，他们再次喜欢在我们的军队中服役。所以这是一件很棒的事情，非常感谢。干得好。谢谢你们。
+
+今晚与我们一起的是一位年轻人，杰森·哈特利，他深知责任的重担。杰森的父亲、祖父和曾祖父都曾穿过军装。杰森在年幼时不幸失去了父亲，他的父亲也是洛杉矶县的副警长。现在他想继承家族的军旅传统。杰森是一名高中四年级学生，是一名六字母大学运动员，据说是一名非常优秀的运动员，是一名才华横溢的学生，平均绩点为 4.46 — 相当不错 — 他最大的梦想是进入西点军校学习。
+
+杰森，入伍是一件大事。入伍很难。但我很高兴地通知你，你的申请已被接受。你很快就会加入军校学员队。谢谢你。杰森，你将进入漫长的灰色队伍，杰森。作为总司令，我的重点是打造未来最强大的军队。作为第一步，我要求国会资助最先进的金色圆顶导弹防御盾，以保护我们的国土——全部由美国制造
+
+罗纳德·里根很久以前就想这样做，但当时技术还不成熟，甚至还差得很远。但现在我们有了这项技术。实际上，这真是太不可思议了。其他地方也有，以色列也有。其他地方也有。美国也应该有，对吧，蒂姆，对吧？他们也应该有。所以我要感谢你。但这非常非常重要——这是一个非常危险的世界——我们应该拥有它。
+
+我们希望受到保护，我们将以前所未有的方式保护我们的公民。为了加强我们的国防工业基础，我们还将重振美国造船业，包括商用造船业和军用造船业。为此，我今晚宣布，我们将在白宫设立一个新的造船办公室，提供特殊的税收优惠，让这个行业回归美国。我们过去曾在那里制造过很多船只。我们现在很少制造这些船只，但我们会很快、很快地制造它们。这将产生巨大的影响。
+
+为了进一步加强我们的国家安全，我的政府将收回巴拿马运河，而且我们已经开始这么做了。就在今天，一家大型美国公司宣布，他们将购买巴拿马运河周围的两个港口以及与巴拿马运河和其他几条运河有关的许多其他东西。巴拿马运河是由美国人为美国人建造的，而不是为其他人建造的。但其他人也可以使用它。
+
+但修建巴拿马运河的代价是美国人付出了巨大的血汗和财富。38,000 名工人在修建巴拿马运河时丧生。他们死于疟疾、蛇咬和蚊子叮咬。这不是一个好工作场所。他们明知有 25% 的死亡几率，却仍然支付高额报酬。如果以现代成本来衡量，这也是我国历史上修建的最昂贵的项目。卡特政府以 1 美元的价格将其赠送给了巴拿马。但这项协议遭到了严重违反。我们没有把它送给中国，而是送给了巴拿马，现在我们要把它拿回来。
+
+现在我们有马可·鲁比奥掌权。祝你好运，马可。现在我们知道如果出了什么问题该怪罪谁了。不，马可一直很出色，他会做得很好。想想看。他获得了 100 票。你知道，他实际上获得了 99 票，但第 100 票是这位先生，我非常确定，所以让我们假设他获得了 100 票。我对此要么非常非常高兴，要么非常担心。但他已经证明——我的意思是他是一位伟大的绅士，他受到所有人的尊重，我们感谢你们投票给马可。他会做得非常出色。谢谢。谢谢。他做得很好。干得好。
+
+今晚，我还要向格陵兰的人民传达一个信息。我们坚决支持你们决定自己未来的权利。如果你们选择，我们欢迎你们加入美国。我们需要格陵兰来维护国家安全，甚至维护国际安全。我们正在与所有相关人员合作，努力实现这一目标。但我们真正需要的是维护国际安全。我认为我们会实现这一目标——不管怎样，我们都会实现。我们会保护你们的安全。我们会让你们富裕起来。我们将共同把格陵兰带到你们从未想象过的高度。格陵兰人口很少，但土地面积非常大，对军事安全非常重要。
+
+美国再次坚定地对抗激进伊斯兰恐怖主义势力。三年半前，在灾难性的、无能的阿富汗撤军行动中，ISIS 恐怖分子在修道院门爆炸事件中杀害了 13 名美国士兵和无数其他人。他们不是在撤军，而是撤军的方式。这也许是我们国家历史上最尴尬的时刻。
+
+今晚，我很高兴地宣布，我们刚刚逮捕了对那起暴行负责的头号恐怖分子，他现在正在前往美国接受美国司法的制裁。我要特别感谢巴基斯坦政府帮助逮捕这个恶魔。对于那 13 个家庭来说，这是一个非常重要的日子，我实际上非常了解他们，其中大多数家庭，他们的孩子被杀害，许多人——超过 42 人——在阿富汗的那个悲惨的日子里受了重伤。多么可怕的一天。表现出如此的无能——当普京看到发生的事情时，我想他说，“哇，也许这是我的机会。”事情就是这么糟糕。不应该发生。非常无能的人。
+
+我和许多受害者的父母和亲人交谈过，今晚他们都在我们心中。刚刚和他们通了电话。我们接到了一个重要电话。每个人都打了电话，每个人都在电话里，他们只是高兴得哭了。他们非常高兴。在这种情况下，你能高兴到什么程度呢？他们的孩子——兄弟、姐妹、儿子、女儿——毫无理由地被杀了。
+
+在中东，我们正在把人质从加沙带回来。在我的第一个任期内，我们达成了数代人以来最具开创性的和平协议之一：《亚伯拉罕协议》。现在，我们将在此基础上为整个地区创造一个更加和平和繁荣的未来。中东发生了很多事情。最近，人们一直在谈论乌克兰和俄罗斯之间的各种事情。中东发生了很多事情。事实上，这是一个艰难的地区。
+
+我也正在不知疲倦地努力结束乌克兰的野蛮冲突。数百万乌克兰人和俄罗斯人在这场可怕而残酷的冲突中毫无必要地丧生或受伤，而且看不到结束的迹象。美国已经投入数千亿美元来支持乌克兰的国防，但没有提供任何安全保障，什么都没有。
+
+你想再持续五年吗？是吗？你会说。波卡洪塔斯说是的。每周都有 2,000 人被杀害——不止这个数字。他们是俄罗斯年轻人，他们是乌克兰年轻人。他们不是美国人，但我希望停止这种情况。与此同时，欧洲在购买俄罗斯石油和天然气上花费的钱比他们在保卫乌克兰上花费的钱要多得多。
+
+想想看。他们在购买俄罗斯石油和天然气上的花费比他们在防御上花费的还多。我们花了大概 3500 亿美元，就像从婴儿手里抢走糖果一样。这就是发生的事情。而他们花了 1000 亿美元。这是多么大的区别啊。我们之间有一片海洋，而他们没有。但我们和他们相处得很好，很多好事正在发生。拜登批准在这场战斗中投入的资金比欧洲花费的资金多出数十亿美元。很难相信他们不会在某个时候停止这场战斗。来吧，让我们扳平比分。你必须和我们平起平坐。这并没有发生。今天早些时候，我收到了乌克兰总统泽连斯基的一封重要信。信中写道：“乌克兰准备尽快坐到谈判桌上，以更接近实现持久和平。”
+
+他说：“没有人比乌克兰人更希望和平。我和我的团队随时准备在特朗普总统强有力的领导下努力实现持久的和平。……我们非常重视美国为帮助乌克兰维护其主权和独立所做的努力。……关于矿产和安全协议，乌克兰随时准备签署。”
+
+这对你来说很方便。我很感激他发了这封信。我刚刚收到。与此同时，我们与俄罗斯进行了认真的讨论。然后我收到了强烈的信号，表明他们已准备好和平。那不是很美好吗？那不是很美好吗？
+
+那不是很美好吗？
+
+是时候停止这种疯狂行为了。是时候停止杀戮了。是时候结束这场毫无意义的战争了。如果你想结束战争，你必须与双方对话。近四年前，在紧张局势加剧的情况下，一位名叫马克·福格尔的历史老师在俄罗斯被拘留，并被判处 14 年流放。这是一件非常艰难的事情。上一届政府几乎没有采取任何行动来帮助他。他们知道他是无辜的，但他们不知道从哪里开始。但去年夏天，我向他 95 岁的母亲马尔菲娜承诺，我们会把她的儿子安全带回家。任职 22 天后，我做到了这一点，他们今晚也在这里。
+
+致马克和他伟大的母亲，我们很高兴你们平安无事地和我们在一起。命中注定，马克·福格尔出生在宾夕法尼亚州巴特勒的一个小乡村，他的母亲在那里生活了 78 年。我刚好在去年 7 月 13 日去那里参加集会。那次集会并不愉快。就在我走上舞台之前，我在那里遇到了他美丽的母亲，我告诉她，我不会忘记她对她儿子说的话，我从来没有忘记过，不是吗？永远不会忘记。不到 10 分钟后，在同一场集会上，枪声响起，一个病态而疯狂的刺客从狙击手的位置向成千上万的人群中射出了八颗子弹。我的生命被挽救了，差一点就被挽救了。
+
+但有些人就没那么幸运了。科里·康佩拉托雷是一名消防员、一名退伍军人、一名基督徒、一名丈夫、一名尽职尽责的父亲，最重要的是，他是一名保护者。当枪声划破长空时——那是一种可怕的声音——科里立刻知道那是什么，知道该怎么做。他扑到妻子和女儿身上，用自己的身体为她们挡子弹。科里受了重伤。你们都知道这个故事——他牺牲了自己的生命来拯救她们的生命。
+
+另外两个非常优秀的人也受到了严重的伤害，但幸运的是，在两位出色的乡村医生的帮助下——我们以为他们已经死了，然后他们被救了。所以那些医生很有能力。科里的妻子海伦和他们两个心爱的女儿艾莉森和凯莉也和我们在一起。谢谢。
+
+致海伦、艾莉森和凯莉：科里现在正俯视着他的三位美丽女士，他正在为你们加油。他爱你们。他正在为你们加油。科里过早地离开了我们，但他的命运是给我们留下一个真正的美国爱国者无私奉献的光辉典范。正是科里这样的爱建立了我们的国家，正是科里这样的爱将使我们的国家比以往任何时候都更加雄伟。
+
+我相信那天在巴特勒，我的生命被拯救是有充分理由的。上帝拯救了我，让美国再次伟大——我相信这一点。我坚信这一点。谢谢你们。非常感谢。
+
+从莱克星顿和康科德的爱国者到葛底斯堡和诺曼底的英雄，从穿越特拉华州的勇士到攀登落基山脉的开拓者，从翱翔于小鹰镇的传奇人物到登上月球的宇航员，美国人民始终不畏困难，超越危险，做出非凡的牺牲，不惜一切代价来保卫我们的孩子、我们的国家和我们的自由。
+
+正如我们今晚在这个会场看到的，同样的力量、信念、爱和精神仍然活跃在美国人民心中。尽管有人竭尽全力试图审查我们、压制我们、打击我们、摧毁我们，但今天美国人民是一个自豪、自由、主权和独立的国家。这个国家将永远自由，我们将为之战斗至死。我们绝不会让任何事情发生在我们挚爱的国家。因为我们是一个实干家、梦想家、斗士和幸存者的国家。我们的祖先跨越浩瀚的海洋，大步迈进未知的荒野，在险恶的边疆的岩石和土地上开辟自己的命运。
+
+他们跨越无边无际的大陆追寻我们的命运。他们修建铁路，铺设公路，为世界创造了帝国大厦、雄伟的胡佛大坝和高耸的金门大桥等美国奇迹。他们用电照亮世界，摆脱地心引力，启动美国工业的引擎，击败世界各地的共产主义者、法西斯主义者和马克思主义者，并为我们创造了无数用铁、玻璃和钢铁打造的现代奇迹。
+
+我们站在这些开创现代时代的先驱者的肩膀上。这些工人曾登上我们城市的天际线，这些战士在战场上浴血奋战，为我们的权利和自由奉献了一切。
+
+现在是我们为美国自由而奋斗的时候了。现在轮到我们把美国的命运掌握在自己手中，开始我们国家历史上最激动人心的日子了。这将是我们最伟大的时代；在未来四年里，在上帝的帮助下，我们将带领这个国家走得更高，我们将打造地球上有史以来最自由、最先进、最具活力和最具主导地位的文明。
+
+我们将创造最高质量的生活，建设世界上最安全、最富裕、最健康和最具活力的社区。我们将征服科学的广阔疆界，我们将带领人类进入太空，在火星甚至更远的地方插上美国国旗。通过这一切，我们将重新发现美国精神不可阻挡的力量，我们将重申美国梦的无限希望。每一天，我们都将挺身而出，为我们的公民所信仰的国家、为我们的人民应得的国家而战斗、战斗、战斗。
+
+我的美国同胞们，为一个不可思议的未来做好准备吧，因为美国的黄金时代才刚刚开始。这将是前所未有的。谢谢大家，愿上帝保佑你们，愿上帝保佑美国。
+
+-------------
 接“katago的大块死活bug：棋子越多，判断越错”
 
 Katago：我明明优势很大，怎么就输了？<br>
