--- a/text/长文1.md
+++ b/text/长文1.md
@@ -1,3 +1,24 @@
+接“就是达到“阴气消尽，阳气纯粹”的境界啊！”
+
+人如果能经常将心火（指思虑、情绪等）下降到下丹田（脐下部位），（使得）外界的境遇不会侵扰内心，狂乱的思虑得以泯灭断绝，那么（体内凝聚的）那股炁就不会散失，而是会汇聚停留在炁海（即下丹田）。（在这种状态下）贤炁（可能指肾气或某种能量）不会（轻易）向上升腾，呼吸就会逐渐变得微弱细少。即使有气息呼出，也是非常缓慢悠长、几乎难以察觉的。所以后来的圣人能够达到自然的“胎息”（像胎儿在母腹中那样不用口鼻呼吸的状态）境界。
+
+至于达摩（Bodhidharma，禅宗祖师，此处借其名或指其相关法门）所传的胎息最高妙的道理，是说人的炁向上升腾时，自然就会有所耗散走失；不如转而向内观照自身内部的各个“世界”（指身体内景），让心神遨游于自己的“天宫”（通常指头部/上丹田），超越到清净虚无的玄妙境界。这个方法的关键和可贵之处在于做到“无漏”（指精气神不外泄），不起一丝杂念，不动一点意图。能够做到无漏，就能成就好的道果；能够如如不动，就能见到真正的圣境。（传说达摩）因而面壁九年，（修炼到）气息没有丝毫耗散走失，（最终）阴神（或指精神体）能够自然出离肉体，成就了“身外有身”（拥有独立于肉体的能量身或法身）。（但据说当时）东方的人（指中国人）不能领悟（此法），（达摩）于是掷下衣钵向西返回（印度）。所以圣人说这才是真正的胎息。
+
+又说到扁鹊注解《灵枢》（中医经典）时（所阐述的方法），是在冬至之后（阳气初生之时），积累一分的“真铅”（内丹术语，通常指先天元精或后天肾中真阳），它的形状如同小丸药物一般，用它来镇守在丹田部位。让修炼者用鼻子吸入清气，闭住嘴巴不让气呼出，以（这样）稳定的呼吸二十四次算作（炼丹）火力的一两。持续修炼四十五天，火力累积达到一斤（十六两），就能炼成“阳胎”（内丹术中阳性能量的凝聚体）。
+
+又在夏至之后（阴气初生之时），积累三分的“真汞”（内丹术语，通常指先天元神或后天心中真阴），它的形状如同（雀鸟）抱着的卵一般，用它来镇守在绛宫（心或中丹田）。也同样是用鼻子吸入清气，闭住嘴巴不让气呼出，以稳定的呼吸二十四次算作火力的一两。持续修炼四十五天，火力累积达到一斤（十六两），就能炼成“阴息”（内丹术中阴性能量的凝聚体或状态）。
+
+然后将炼成的“阴息”投入（或结合）“阳胎”，就能产生“真炁”（更高层次的生命能量）。由真炁产生“元神”（先天灵性）。（最终）达到神与形合为一体，寿命与天地一样长久。或者（元神）可以脱离肉体而成为独立的两个存在（指肉身和阳神），即达到“身外有身”的境界，成为“羽客仙子”（对道家仙人的称呼），不再居于尘世凡间，而是返回到（传说中的仙境）三岛十洲。
+
+至于葛洪注解《胎息论》时说：凡是实行胎息的关键要领，（理想状态是）如同胎儿在母亲腹中一样，母亲呼气（胎儿通过脐带与母体气息相连，也随之）“呼”，母亲吸气也随之“吸”。现在的人不明白这个精妙的道理，即使能够短暂地闭气一会儿，（但气憋不住时）随即就（猛地）呼出来，导致喘息不止。这不仅不能保留住所闭住的气息，反而使自身的元炁受到损伤亏虚，被外来的阳气（指粗糙的外界空气或能量）所侵夺。
+
+如果在气息变得急促之前（能有所觉察），身体自然可以（在闭气状态下）停留一会儿，不要让气息变得过于急迫。在气息将要变得急促的时候，先用鼻子吸入一口清气，接着就用这新吸入的气，换出（体内）原先闭住而快要憋不住的残余之气。这样就能“夺住”（掌控、保留住）体内的炁，（通过这种方式）积累炁，就能使精神和身体都变得清爽，可以消除治疗各种疾病。（但是这种）勉强存留、巧妙换气的做法，也不是完全自然的，所以被认为是下等的胎息方法。
+
+真正的仙人和上等的圣人，（对于胎息）有上中下三品（等级）的论述。（普通的）鼻子吸气、口中吐气的方法，可以用来去除身体表层的寒气，驱逐外来的热邪，冲开气血郁结阻滞之处，运行通畅经络。（而更高级的）如果能做到“定息”（呼吸极其平稳细微，若有若无的状态），（后天的）气血不再（像平时那样激烈）交感，（先天的）阴阳二气就能自然交合。如果能稳定在这种状态达到“万息”（指长时间或极高深的定境），那么炁就会停止（外在的运行），神就会内藏（于本源），这是“大乘”（喻指最高层次）的功夫，其妙处难以用语言形容。在补充元炁的方法中，这（定息/真胎息）是最高等的了！
+
+其他的一些方法，例如吞咽炁来解除饥渴，运行炁来强健肌肤，收聚炁来补益下丹田，保养炁来恢复年轻容颜，运用炁来助益血脉流通等等，虽然也能见到一些小的功效，但终究比不上通过胎息来补充元炁，（因为胎息）得力快、功效迅速而且效果持久。
+
+---------------
 3 月 4 日特朗普将在国会联席会议上发表演讲，这一举动释放了哪些信号？
 
 尊敬的约翰逊议长、万斯副总统、美国第一夫人，以及美国国会议员们，感谢你们的出席。
