--- a/text/长文1.md
+++ b/text/长文1.md
@@ -1,3 +1,599 @@
+
+任何一个序数必须是整数，这是为什么？ - 御坂16899号的回答 <br>
+https://www.zhihu.com/question/662465758/answer/3596734234
+
+席建成 回复 系统
+把0作为第一个自然数肯定不对吧 ，当你数右手上有几个手指头时 ，你会把第一个手指头数成是0吗 ，数到最后一个数是4吗 ？难道不是从第一个开始数成一，然后数到五，我们就说我们有五个手指头吗？
+
+御坂16899号
+这个就是一个表述和习惯的问题，可能确实把0作为第一个自然数不是很自然，但是数学中已经习惯了把0当做第一个自然数了。事实上，你把文中的所有0换成1没有任何影响。
+
+席建成 回复 御坂16899号
+你的意思已经很明显了，恭喜你找到了皮亚诺公理的错误之处 ：你说事实上，你把文中的所有0换成1没有任何影响。这就是在说0=1 。
+所以，我认为皮亚诺公理需要修改 。
+
+御坂16899号
+0换成1没有影响，1换成0也没有影响，无论是皮亚诺公理从0开始，还是你改一下成席建成公理从1开始，都是没问题的，因为这两种表述是等价的，意义是相同的。
+
+席建成 回复 御坂16899号
+新的问题又来了 ，按照你的理解 1=0是成立的 ，但是皮亚诺公里说1是0的后继 ，1和0是不相等的 ，是不能相互替换的 。
+
+死亡用户
+你先分清同构和相等
+
+席建成 回复 死亡用户
+能相互替换的东西不是相等的关系吗 ？
+
+死亡用户
+称含有0的皮亚诺体系为P1，不含有0的皮亚诺体系为P2，这里的相互替换是指P1中的"0"等于P2中的"1"，而不是P1中的"0"等于P1中的"1"，换言之， P2中的"1"和P1中的"1"不是一回事
+
+死亡用户
+这个逻辑是没问题的，第一个手指是0，第五个手指是4，所以你有五个手指
+
+席建成 回复 死亡用户
+按照你的理解不含有0的皮亚诺体系称为p2 ，像10 20 30 等这样的数字是如何表示的 ？
+
+死亡用户
+你这完全不是一个问题啊，这不就是符号的事吗？我写成无进制都可以啊
+
+席建成 回复 死亡用户
+再说了，在P1体系中 ，首个数字是第0个还是第1个？首个数字是客观的存在还是不存在呢 ？若用表示不存在的0来表示首个存在 ， 那么这个0就是既是存在也是不存在了 。当它是不存在时用0表示，当它是存在时用1表示 ，所以0=1也是正确的 。皮亚诺公理却否认了这一点 。
+
+席建成 回复 死亡用户
+不是你自己说的吗， 存在不含0的p2体系， 这个体系不是现成的吗 ，你直接将体系中的这三个数字写出来不就好了吗 ？
+
+死亡用户
+1，首个数字就是首个数字啊，你不能在数字体系建成之前，就用数字体系评判一个数字的位置
+2，你的话自相矛盾，0表示不存在，不能推出0是不存在的。换句话说，0表示不存在的东西的集合，不存在的东西不存在，不代表不存在的东西的集合不存在
+3，凭什么存在时就要用1表示，那2也是存在的，为什么不用2表示
+
+死亡用户
+一，二，三，四，五，六，七，八，九，十，二十，三十
+可以吗
+
+席建成 回复 死亡用户
+按照你的理解又有一个新的问题了 ，在p2体系中 ，十减十的得数如何表示 ？
+
+死亡用户
+不存在，除非搭建整数，就像一减二一样
+
+席建成 回复 死亡用户
+p2体系是你自创的吧 ，他不是现成的吗 ？你直接把表示不存在的数字写出来就可以了 ，怎么还要搭建整数呢 ？
+
+死亡用户
+是现成的呀，但十减十就是不存在啊，那要不然你告诉我，1-2等于多少
+
+死亡用户
+“把表示不存在的数字写出来”这一步就已经在搭建相对于P2的整数了
+
+席建成 回复 死亡用户
+按照你的理解又来了一个新问题 ，你之前说p1体系和p2体系是等价的 。P1体系中因为有0可以演化成有负数的整数。比如说10-10-1 =-1 ，1-2=-1，0-1=-1。这里的0具有表示存在的意义 ，比如说0度 0时等 。0是一个具有存在意义的数 ，再减去一个存在意义的1，会得到另一个存在意义的数 ，这个逻辑是很通顺的 。
+但是P2体系中，十减十就是不存在了，一个不存在的数再减去1是什么意义呢 ？在p2体系中显然无法演化出负整数 。
+所以p1体系和p2体系是不等价的 ，因为在p1体系中0具有存在意义 ，是得到承认的 。但是在p2体系中 ，不存在就是不存在 ，不能像 p1体系中的0一样既承认其不存在也承认其存在性 。
+
+席建成 回复 死亡用户
+那么在 P2体系中这个数字是什么呢
+
+死亡用户
+就没有这个数字啊
+
+死亡用户
+1，等价不意味着完全一样，只要同构即可。
+2，P2也可以演化出0和负整数，但能演化出和包含是两个概念
+
+死亡用户
+P1也不存在-1，只是能演化出-1
+
+席建成 回复 御坂16899号
+你说P2也可以演化出0和负整数 ，是说P2也可以像P1一样 ，承认0具有表示存在的意义吗 ？也就是说明确承认不存在也是一种存在 ，换句话说 承认存在也是一种不存在 。
+我们先不管P2体系中这个不存在用什么符号表示 ，对于首个数字1肯定表示存在 ，如果也承认了这个存在也具有不存在的意义 ，数字1也就可以表示不存在。即1=不存在，存在与不存在是相等的关系 ，都用同一个符号 1或0，为了严格区分二者有时需要使用另一个符号 ，这就导致了表示同一个事物用了两个不同的符号 ，就是说在P2体系中承认1=不存在成立，在P1体系中 承认0=1 成立，但是皮亚诺又说1是0的后继数 ，两个不同的后继数之间不能画等号 ，又否认了0和1的相等性 。这就是皮亚诺公理的错误所在 。
+
+御坂16899号
+不建议在数学中引入哲学意义上的存在与不存在的概念。你对公理体系的理解有一些偏差，P2中指明了1之后的自然数的概念，没有指明0是什么，这不意味着P2否认0的存在，我们依旧可以通过1-1的方式去定义0。
+
+席建成 回复 死亡用户
+有这个数字表示不存在的数字就是1
+
+席建成 回复 御坂16899号
+数学和哲学是从来不分家的 ，离开哲学谈数学就是自寻死路。
+
+死亡用户
+你说的话毫无逻辑，一开始未定义所以是不存在，后面定义了所以是存在，这两个是不冲突的，也就是说不存在可以变成存在，但不代表二者相等，所以你后面说的更是无稽之谈
+
+席建成 回复 死亡用户
+你说话才是毫无逻辑呢 ，一个事物的存在与否是按照人是否定义来决定的吗？不定义 不存在 ，定义了才存在 ，这是什么逻辑呀 ？
+
+御坂16899号
+诚然数学与哲学不分家，但你这样做就和尝试用辩证法理解相对论一样，只会让你的脑子一团浆糊。
+
+席建成 回复 御坂16899号
+不会用的才会让脑子一团浆糊 ，会用的只会越辨越明
+
+死亡用户
+最简单的逻辑你理解不了吗？a存在于集合{a，b}中，但不存在于集合{c，d，e}中，但你在{c，d，e}中讨论a的存在性，还问我存在是由人定义的吗？
+
+御坂16899号
+这里你就没能区分在公理体系下的存在和所谓哲学上的存在。
+
+席建成 回复 死亡用户
+什么都不存在， 本身就是一种实实在在的存在 ，这么简单的逻辑你也理解不了吗 ？不存在与存在本身就是不能分家的 ，你非要把他们分开看能不出错吗 ？本来是共性 两者都有 ，非要分开看 ，只承认其中一个有 ，能符合客观事实吗 ，从另一事实推出来的结论与你自己错误推理得出来的结论 能不产生矛盾吗 ？
+
+死亡用户
+那先请你定义“存在”和“不存在”，并且说出二者所满足的规则
+
+死亡用户
+请证明“不存在与存在本身就是不能分家的 ”
+
+死亡用户
+请证明“什么都不存在， 本身就是一种实实在在的存在 ”
+
+席建成 回复 御坂16899号
+无论怎样的公理体系都要符合客观事实吧 ，都要遵守主观与客观相一致的原则吧 ，都要承认客观决定主观的规律吧，就是说主观认识与客观事实相冲突时，是主观认识符合服从客观呢 还是客观服从主观呢 ？
+只要对上述标准的认识我们是统一的 ，那么在公理体下的存在和所谓哲学上的存在就是一回事了。
+
+席建成 回复 死亡用户
+我早就说了 0就是这种事物 ，{0}=1，就是最好的证明 。空集也是一个集合 ，不就是什么都不存在， 也是一种存在吗 ？
+
+死亡用户
+那你还没有定义“存在”和“不存在”
+
+死亡用户
+而且你要搞清楚“x∈∅→ x不存在”和“∅存在”是两个概念，x和∅是完全不同的两个东西，∅不能说明x是存在的，你的“存在和不存在不分家”论也不成立
+
+席建成 回复 死亡用户
+你学过辩证法吗？矛盾的对立统一规律 你知道吗 ？存在于不存在本身不能分家 还需要我证明吗 ？
+
+御坂16899号
+这段话体现出你并没有理解公理化体系是干什么的。
+
+席建成 回复 御坂16899号
+你说这个话 ，说明的你对上述标准的认识和我并不统一 ，也许在你看来，当客观事实与主观认识相冲突时 ，客观事实应当服从主观认识是对的 。那我们还有什么好谈的呢 ？
+
+席建成 回复 死亡用户
+你上过高中没有 ， 矛盾论 辩证法学过吗 ？
+
+死亡用户
+抱歉，这些你全部都需要证明一遍
+
+死亡用户
+我真的服了，每次我以为是在给萌新讲数学，没想到都遇到这种玩意[大哭]
+
+席建成 回复 死亡用户
+温度为0℃ ，时间到了0时 ，都是什么意思 你能理解吗 ？他们是不是一种客观存在的事物呢 ？如果你认为是，为什么可以使用表示什么都不存在的0这个符号呢 ？
+这就是存在与不存在不分家 ，及二者定义的直观体现 。
+
+御坂16899号
+哈哈哈哈，他让我意识到了用数学的方式思考数学的重要性。
+
+席建成 回复 死亡用户
+连教科书上的东西也需要我给你证明一遍 ？你去请教你的老师去吧， 我没义务给你证明 。
+
+死亡用户
+证明不了就是证明不了，不用说大话
+
+席建成 回复 死亡用户
+矛盾论 的东西也需要我证明吗 ？这不是常识吗 ？教科书早就证明了， 你去看教科书啊 ，我给出的证明也是和教科书上一样的 。
+
+死亡用户
+第一，0并不表示什么都不存在，0是不存在的东西的集合，所以0是存在的
+第二，这显然已经将存在和不存在分家了，二者有极大差别
+第三，你的例子并不合适，因为0℃在宇宙中实际上是相当高的温度，并不是你的什么都没有，而0时，更不是客观存在的事物，而是某一时刻的序号
+
+死亡用户
+既然这么常识，你为什么证明不了呢
+
+死亡用户
+只要你不能说出你的证明，那你就是不能证明
+
+席建成 回复 死亡用户
+好了，到此为止吧，你可以退下了 。
+
+席建成 回复 死亡用户
+教科书上有， 你去看教科书， 好不好 。难道你让我证明一遍 ，我就要把一整本书写到这里吗？
+
+席建成 回复 死亡用户
+首先，0是不是具有表示什么都不存在的意义 ？同时也具有表示存在的意义 ？他们在同一事物上有两种相反的意义。他们哪里分家了 ？
+其次，0℃表示存在温度的意义 ，你理解了 ，这体现了0具有表示存在性的意义 ，0℃被定义为水混合物的温度 。同时也是其他物体的温度与这一物体的温度差别为0的体现。也就是表示没有差别 ，不存在差别 ，表现出不存在的意义 。存在与不存在都是在同一事物 上，体现了不分家且相等的意义 。
+
+死亡用户
+当然了，你说的这些，都在ZF之前建成，你至少要证明它们与ZF是一致的
+
+死亡用户
+0不代表什么都不存在，0代表一种存在
+
+死亡用户
+“不存在这种状态是存在的”这个存在命题，并不能验证“存在与不存在不分家”这个全称命题
+
+席建成 回复 死亡用户  
+同一个事物用不同的符号来表示时 ，两个不同的符号之间可以画等号吗 ？若可以画等号 ，你说他们两个是可不可以分家的呢  
+
+席建成 回复 死亡用户  
+ZF本身就有很多错误 ，为什么非要和他保持一致呢 ？为什么不和事实保持一致呢  
+
+席建成 回复 死亡用户  
+请问空集=0你怎么解释 ？  
+
+死亡用户  
+空集是空集，不存在的东西是不存在的东西，这是完全两个不同的事物  
+
+死亡用户  
+ZF有没有错误不是你说了算，我还说你的矛盾论漏洞百出呢  
+
+死亡用户  
+世界上根本没有你所谓的“事实”  
+
+席建成 回复 死亡用户  
+客观事实你也不承认吗 ？  
+
+死亡用户  
+那你怎能保证你认为的“客观事实”是真正的事实，事实上，你所认为的任何“事实”都是主观的  
+
+席建成 回复 死亡用户  
+那你解释一下空集的定义是什么 ？  
+
+死亡用户  
+“不存在任何东西”的集合  
+
+席建成 回复 死亡用户  
+客观事实是不以人的意志为转移的 。当主观认识与客观事实一致时 ，主观认识才具有权威性 。不会因为他也属于一种主观认识 ，就失去了其说服力 。因为客观力量总是强于主观力量  
+
+席建成 回复 死亡用户  
+真正的事实具有无比强大的力量 ，任何与之冲突的主观认识，必然会被无情的通过逻辑被证伪  
+
+死亡用户  
+但你永远无法判定你的“主观认知与客观事实一致”  
+
+死亡用户  
+但巧合的是，你的逻辑恰恰不太好，所以无法做到这一点  
+
+席建成 回复 死亡用户  
+矛盾论与ZF相冲突，它们都是基于客观事实总结出来的主观认识 ，与客观事实不一致，必然有一个是错误的 。到底是谁错了呢 ？肯定是ZF了 。原因很简单 ，从ZF当中能够推导出1=0 ，却不敢承认 ，明明符合 矛盾论 。自己的理论又能推导出1=0 ，就是不敢承认 ，只能说这是理解能力的问题 ，不是推理本身有没有错误的问题  
+
+席建成 回复 死亡用户  
+你怎么不想一想是你的逻辑有问题呢 ？  
+
+席建成 回复 死亡用户  
+只要相信逻辑推导的强大说服力即可 ，说服力越强越接近客观事实  
+
+死亡用户  
+因为你的逻辑明显有问题  
+
+死亡用户  
+必然有一个是错误的 。到底是谁错了呢 ？肯定是矛盾律了 。原因很简单 ，从矛盾律当中能够推导出1=0 ，自己的理论能推导出1=0 ，却要倒打一耙 ，只能说这是理解能力的问题 ，不是推理本身有没有错误的问题  
+
+死亡用户  
+这也是你的主观论断  
+
+席建成 回复 死亡用户  
+空集是空集，不存在的东西是不存在的东西，这是完全两个不同的事物。  
+“不存在任何东西”的集合，是空集的定义。  
+上述都是你自己说的 。  
+集合是不是一种东西 ？“不存在任何东西”的集合，是不是可以改成“不存在任何东西”的东西？是不是可以理解成空集就是不存在的东西 ？  
+你的第一句话是说，空集与不存在的东西是两回事 。  
+天呐 这咋解释啊 ？  
+
+死亡用户  
+不可以改成，因为“不存在东西的东西”不是“不存在的东西”，你省略一个“的东西”依据为何？毫无逻辑  
+
+席建成 回复 死亡用户  
+他们两个明明是同一个意思，你体会不出来吗 ？不存在东西的东西 ，是一种存在吧 ？不存在的东西 ，也是一种存在吧 ？语法上的字前面是定语的字后面是主语 。主语都相同，都是一种存在的东西 。  
+我的钢笔和你的钢笔是不是都是钢笔？  
+
+席建成 回复 死亡用户  
+不存在东西和不存在是不是同一个意思啊  
+
+死亡用户  
+不是  
+
+死亡用户  
+你的爸爸的爸爸，和你的爸爸不是同一个人  
+
+死亡用户  
+不存在的东西，不是一种存在  
+
+死亡用户  
+被删了  
+
+席建成 回复 死亡用户  
+根本不是推理有错误而是理解能力有区别而已。  
+
+死亡用户  
+所以在你的理解里，你的爸爸的爸爸是你的爸爸？  
+
+席建成 回复 死亡用户  
+请搞清楚什么是定语什么是主语 。同义变换说法 ，意思仍保持不变 。  
+
+死亡用户  
+请你搞清楚什么是定语，什么是主语，什么是同义变换说法
+
+席建成 回复 死亡用户  
+“你的爸爸”是定语，“你的”是定语，“爸爸”是主语，按照你的论证，“你的爸爸的爸爸”和“你的爸爸”是一回事  
+
+席建成 回复 死亡用户  
+你这样，你把你的改成不存在 ，不存在的 爸爸的爸爸 ，和不存在的爸爸比较。若你认为不同，明显你就是把不存在当成一种存在来处理了 。你把不存在当成真正的不存在来试一下 ，不存在的 爸爸 ，是不是不存在啊 。主语仍然是爸爸 ，但定语是不存在的，定语是起限制作用的 ，这一限定就把主语限定没了 ，不管后边跟多少主语 ，结果都是不存在 。就像零乘以任何数都得零一样  
+把不存在当成一种存在 ，结构不同， 意义肯定不同 ，但是把不存在当成真正的不存在 ，结果都相同， 都是不存在  
+
+死亡用户  
+不存在的爸爸不一定是不存在，一个男人如果得了弱精症，那他这是不存在的爸爸，但它是存在的  
+
+席建成 回复 死亡用户  
+你这不是很清晰的承认了不存在就是一种存在吗？  
+
+死亡用户  
+不是“不存在的爸爸”存在，而是“不存在”的爸爸存在，你不要偷换概念  
+
+席建成 回复 死亡用户  
+说了半天， 你还没有意识到你把不存在当成了一种被限制形式的存在了吗 ？你还是下意识的承认不存在就是一种存在呀 。  
+
+死亡用户  
+我并没有“限制”不存在，我说“不存在的东西的爸爸可能存在”只是一种存在命题，事实上，这也只说明了“不存在的东西的集合存在”，而不是“不存在的东西本身存在”  
+
+席建成 回复 死亡用户  
+只有承认不存在的东西本身就是存在，才有可能使得不存在东西的集合存在。  
+你想想看 ，不存在的东西 ，就是一个什么元素都没有的集合。这个集合本身到底是不是存在呢？如果空集就是什么都不存在 ，他如何作为一个确定存在的元素构成一个非空集合呢 ?即如何证明 {φ}=1呢?  
+换句话说， 有是生于无呢还是有本身就是无呢 。这就扯到了一个根本性的几何问题 ，线是由无数个点累积起来的，点到底有没有 长度呢?若没有，0乘以任何数都得0，线的长度 从何而来呢 ,如何 做到的无中生有呢 ?  
+
+死亡用户  
+1，你逻辑有问题，一个集合内不存在任何东西，并不能推断出这个集合不存在  
+2，线的长度就是线的长度，点的长度就是点的长度，你无法证明“线的长度等于点的长度之和”  
+
+席建成 回复 死亡用户  
+点动成线是最基本的公理 ，这还需要证明吗 ?反过来，求有限长线段上， 每一个点的长度这又牵扯到一个最重要的无穷小到底是大于0还是等于0的问题 。  
+
+席建成 回复 死亡用户  
+这些问题都是最根本的数学上的基础问题 ，好好想一想再回答吧 。  
+
+死亡用户  
+“点动成线”并不能推出“线的长度为点长度之和”  
+
+死亡用户  
+你好好想想再回答吧，捋一下逻辑，不要意淫定理  
+
+席建成 回复 死亡用户  
+好吧，算你说对了 ，就这样吧 。  
+
+死亡用户  
+事实上，线的长度只和单位线的长度有关，在不定义单位线的情况下，线的长度是无意义的  
+
+席建成 回复 死亡用户  
+你有没有想过 ，点和单位线是什么关系 ?单位线又是如何产生的呢 ?没有点会有线吗 ?  
+
+死亡用户  
+这需要以来某种序关系和“减法”，而“点”只需保证“线”存在，至于“线”的长度就不劳烦“点”费心了  
+
+席建成 回复 死亡用户  
+这不是笑话吗 ?如果点没有长度 ，如何保证线存在呢 ?  
+
+席建成 回复 死亡用户  
+你为什么说第一个手指是零而不说第零个手指是零呢 ，数数时有从零开始数的吗 ?  
+
+死亡用户  
+“点动成线”并不能推出“线的长度为点长度之和”  
+
+死亡用户  
+因为第一仅仅是说话习惯  
+
+死亡用户  
+点存在就是线存在  
+
+席建成 回复 死亡用户  
+我始终说的是1=0是成立的 ，这个结论是 从ZF公里中严格推导出来的 ，推理过程是没有错的，但是得出来的结论不能接受 ，认为是错的 ，这明显就是理解能力的问题 ，不是推理本身的问题 。  
+
+席建成 回复 死亡用户  
+还是的呀 ，没有点就没有线 ，同样的， 如果点没有长度 ，线的长度从何而来呢 ?或者说单位线的长度从何而来呢 ?  
+
+死亡用户  
+点没有长度和没有点是两个概念，单位线的长度来源于偏序关系
+
+席建成 回复 死亡用户  
+好吧，你认为点是存在的并且长度为0，0是不是表示不存在的符号? 这不就是典型的不存在就是存在不分家的体现吗 ?  
+
+席建成 回复 死亡用户  
+被删了  
+
+死亡用户  
+0不是表示不存在的符号  
+
+席建成 回复 死亡用户  
+单位线的长度不就是无穷小的大小吗 它到底是等于0还是大于0就是这个问题吧 。  
+单位线的长度最小能小到和点的长度相等 ，也就是说无穷小就是点的大小 ，点无论如何是有大小的 ，不可能是一点长度也没有的0。否则点无论如何都不会累积成线。  
+
+死亡用户  
+单位线的长度是1，点的长度是0，线的长度不是点的长度积累程度  
+
+御坂16899号  
+你先告诉我长度怎么定义。  
+
+席建成 回复 死亡用户  
+又来了，10-10=0，这个0是什么意思 ，是不是什么都没有的意思 ，这个0是不是表示什么都没有的符号 ?  
+
+死亡用户  
+0是表示“什么都没有的集合”，而不是“什么都没有”  
+
+席建成 回复 死亡用户  
+最后一句话你自己信吗  
+
+席建成 回复 死亡用户  
+什么都没有是什么符号啊 ?幼儿园都是学的是什么都没有就是0啊 ，到你这里就不是了 ?  
+
+死亡用户  
+没有信不信，这是事实  
+
+死亡用户  
+难道你就跟着幼儿园学知识吗？没有符号表示“什么都没有”，∅表示“什么都没有的集合”  
+
+席建成 回复 御坂16899号  
+长度就是线段2端点之间的距离呀  
+
+席建成 回复 死亡用户  
+我都告诉你被删了怎么还是被删呀  
+
+席建成 回复 死亡用户  
+你解释一下10-10=0这个0是什么意思啊  
+
+御坂16899号  
+你如此定义了线段的长度，那点的长度如何定义呢？  
+
+死亡用户  
+0是空集啊  
+
+席建成 回复 死亡用户  
+这是你自己说的啊 ，线长不是由点长累积起来的 ，都让大家看看吧 。  
+
+席建成 回复 死亡用户  
+空集是存在还是不存在呀 ?若是存在你的意思 10-10之后还有一点儿东西存在 是吧 ?  
+
+死亡用户  
+这不只是我自己说的，你问任何一个人他都会说  
+
+死亡用户  
+空集存在，10-10=0=∅，10和10之间一点东西都没有，这三者并不冲突  
+
+死亡用户  
+任何一个懂数学的人都会这样说，你觉得有问题，只是因为这是你自己的意淫  
+
+席建成 回复 死亡用户  
+你再解释一下空集自身是存在还是不存在 ?  
+
+席建成 回复 御坂16899号  
+和线长一样， 两个端点之间的距离呀 。  
+
+死亡用户  
+存在  
+
+席建成 回复 死亡用户  
+一点儿东西都没有是空集 ，∅=0，0就不是什么都有没有的意思了吗 ?或者说空集就不是什么都没有的意思吗 ?  
+
+席建成 回复 死亡用户  
+好了， 现在可以确认 ，10-10=0=空集=存在，0=存在。没毛病吧  
+
+死亡用户  
+什么都没有的集合是空集，空集是什么都没有的集合  
+
+御坂16899号  
+如何定义点？点有两个端点吗？你如何定义点的两个端点？  
+
+席建成 回复 御坂16899号  
+点有两个端点 ，这两个端点的距离就是无穷小。就是点的长度 ，它不是一个不断变化的数 ，是一个固定不变的数 。是一个没有比他更小的数 。  
+
+御坂16899号  
+如果你这么想，逻辑可能是自洽的。  
+在你的理论下我有个有趣的问题，有长度的线段是有方向的，我们可以说两个线段垂直。那有两个端点长度无穷小的点是否有方向呢？或者说我们可以说两个点事垂直的呢？  
+
+席建成 回复 御坂16899号  
+点是三维的 ，动起来就是四维的 。点自己有三个相互垂直的维度 。  
+
+席建成 回复 死亡用户  
+你自己都说了，空集=存在，你把空集当成了一个空篮子 ， 这个篮子里面什么都没有，但是他自己却是一个实实在在的东西 。也就是说这个空篮子是无论如何都消灭不了的 。  
+又一个问题产生了 ，10-10等=0 ，这个0是等于这个空篮子呢还是等于篮子里面的空呢 ?  
+你说是等于这个空蓝子里面的空吧 ，那你又说 0是空集 ，是空篮子里面的什么都没有，即上述的空篮子里的空 。你说是空篮子自己吧 ，这个空篮子它自己又是一个实实在在的存在 ，你就又承认了0=存在了 。这与你的初衷不符啊 。  
+
+御坂16899号  
+点的端点的方向是什么？方向不同位置相同的点是同一个点吗？一个位置是否可以存在很多点？位置相同的点彼此之间的距离相等吗？  
+
+席建成 回复 御坂16899号  
+点就是一个边长为无穷小的正方体，这是理想状态的 ，正方体有8个端点，每两个端点之间都有距离 。端点与端点之间不重合 。端点无法独立存在 ，只能成对存在 。端点的大小可以用0来表示 ，点的大小就是无穷小的固定值 ，就是自然数1。  
+
+御坂16899号  
+所以说点不是线段而是一个小正方体？那这个小正方体内还有别的点吗？小正方体的边长是相等的吗？无穷小的固定值是1这句话怎么理解？  
+我每个问题都想知道答案，可以都回我吗[爱]谢谢  
+
+席建成 回复 御坂16899号  
+不行 ，那样的话你就知道太多了 ，对你不好  
+
+席建成 回复 死亡用户  
+被删除了 你再发一遍吧  
+
+死亡用户  
+我从来都承认0是存在的啊，空篮子里的东西不存在，但空篮子是存在的，这冲突吗？
+
+席建成 回复 死亡用户  
+首先，2不能表示首个数字 ，首个数字只能用0或1来表示 。  
+其次，首个数字一定是表示客观存在的 ，因为只有客观存在的事物才有大小多少前后排序的意义。  
+再次，当用0来表示首个具有存在意义的数字时，就体现了不存在就是一种存在的道理，因为我们都知道0是表示不存在的符号 ，就是用表示不存在的符号0表示了存在。这个存在我们本来是用1来表示的 。也就是说我们对于同样的最原始开端的位置 ，1和0是可以相互替换的 ，可以相互替换的事物一定是相等的关系 。所以1=0是成立的 ，1和0是一体并列的关系 ，不是前继后继的关系 。  
+最后，1的后继数是2，0的后继数也是1的后继数2，0的后继数不是1。  
+所以皮亚诺公理是错的 。  
+
+席建成 回复 死亡用户  
+好了， 你承认0是存在 ，在皮亚诺公理中 ，1也是存在 ，并且都是最原始开端的数字 ，他们是处在同一位置上的不同符号 ，可以相互替换 ，0可以像数字1一样表示存在 ，这就很容易让我们理解0和1相等了。  
+
+死亡用户  
+你说的全是错的  
+
+席建成 回复 死亡用户  
+推理没毛病 ，只是结论上超出你的认知了 ，你说错就是错吧 。  
+
+小学渣  
+分清楚isomorphic（同构）和elementary equivalent（初等等价），这一点容易搞混  
+
+席建成 回复 小学渣  
+能相互替换的东西不是相等的关系吗 ？  
+
+小学渣  
+你去学一学再来问  
+
+席建成 回复 小学渣  
+首先，若ab=cd,eb=cd,→a=e。等量代换，等式的传递性，a和e可以相互替换，结果不变，推出a=e。  
+其次，同一事物用两个不同的符号表示时 ，这两个符号不能直接划等号吗 ?比如，书本=book,不成立吗?  
+再说了，P1系统和p2系统等价 ，同构根本就不成立，因为p1本身就是错误的 ，所以才有无法解决的罗素悖论等致命问题 。  
+最后你说两者容易搞混 ，容易就等于必然吗 ?如果你认为我有错误 ，请你明确指出来错误在哪里好不好 ，不要用猜测，可能性这样的说法 。  
+
+小学渣  
+你的问题是认为同构必然初等等价  
+
+席建成 回复 小学渣  
+你错了， 我没有这样想 ，我认为同一个事物用两个不同符号来表示了，这两个不同符号就可以直接画等号 ，这是由等式的传递性决定的 ，跟是否同构没有任何关系 。  
+
+席建成 回复 小学渣  
+自然数是描述客观存在性事物的多少、大小、 前后等信息的工具 ，因为只有存在性的事物才有这些信息 。在排序的问题上 ，对于首个位置你可以用0也可以用1来表示 ，这个首个位置是永远不变的 ，0和1 这两个数字符号可以在该位置上相互替换，那么它们就是相等的关系 ，即0=1成立。  
+
+小学渣  
+你去学一学再来聊。  
+
+席建成 回复 小学渣  
+就这样吧，没必要学错误理论，不想聊就别聊了。  
+
+席建成 回复 小学渣  
+你自己学的那么好 ，这么简单的道理都搞不明白 ，学它何用呢 ?  
+
+席建成 回复 小学渣  
+0=首，同时满足1=首，→0=1，这和同构有什么关系呀?注意是同时满足 ，不是分别满足 ，分别满足涉及到同构问题，同时满足它就是一个不可分割的整体 ，哪来的同构问题呀 ?  
+
+小学渣  
+你这说的是数学问题吗  
+
+席建成 回复 小学渣  
+是啊，你把首字随便换成一个字母 ，不一样的吗 ?这个字母表示为自然数的最原始的开端的数。  
+
+死亡用户  
+是你根本没推理  
+
+席建成 回复 死亡用户  
+你若认为推理有问题， 有错误 ，请指出来 。只说结论是说服不了人的 。  
+
+席建成 回复 死亡用户  
+定义自然数的原始开端位置上的数字为a,则有若0=a, 则也必然同时满足1=a, →0=1。  
+这不是推理吗 ？  
+
+死亡用户  
+是f(0)=1  
+
+席建成 回复 死亡用户  
+总算有进步了 ，但是你只对了一半 。  
+
+死亡用户  
+逆天  
+
+南柯先生  
+不是 替换零件并不是同一个零件 理解不了就别揪着数学闹了  
+
+席建成 回复 南柯先生  
+首先你要明白什么叫能替换吧 ，能替换是说这个被替换之后能保持意义不变 ，如果意义变了，你还觉得他是能替换的吗 ?  
+
+真实幻境  
+要不你仨出个书吧，我跪着听
+
+---------
 接“就是达到“阴气消尽，阳气纯粹”的境界啊！”
 
 人如果能经常将心火（指思虑、情绪等）下降到下丹田（脐下部位），（使得）外界的境遇不会侵扰内心，狂乱的思虑得以泯灭断绝，那么（体内凝聚的）那股炁就不会散失，而是会汇聚停留在炁海（即下丹田）。（在这种状态下）贤炁（可能指肾气或某种能量）不会（轻易）向上升腾，呼吸就会逐渐变得微弱细少。即使有气息呼出，也是非常缓慢悠长、几乎难以察觉的。所以后来的圣人能够达到自然的“胎息”（像胎儿在母腹中那样不用口鼻呼吸的状态）境界。
