--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,33 +2,33 @@
 
 最新 5.1：
 
-为什么穷人的孩子很难成功？ - 反派的回答 - 知乎
+为什么穷人的孩子很难成功？ - 反派的回答 - <br>
 https://www.zhihu.com/question/601884939/answer/1893333380961113192
 
 反派:
-有些人上知乎，只是给自己固有的偏见寻找支点和理由。
+有些人上<br>，只是给自己固有的偏见寻找支点和理由。
 我发现，我身边的穷人家出身的孩子，他们进步到一定程度之后，就会启动一个很神奇的心理机制，叫 “抑制发展” 很神奇。 第一个技术工就是这样的。他进部门之后干得很好，月薪一路从三千升到六升、升到八千、升到一万、一万二、一万五、一万八………… 当他工薪终于达到两万之后，不知道为什么，就开始一直犯错，直到退出项目。 两万，一般人是不…阅读全文​
 
-什么样的数学题解答方式可以称为天秀？ - 东城居士的回答 - 知乎
+什么样的数学题解答方式可以称为天秀？ - 东城居士的回答 - <br>
 https://www.zhihu.com/question/340796389/answer/1900975429948519641
 
 东城居士:
 我们知道若素数 则存在正整数 使得 对于这一结论目前已有很多种证法，但最秀的还得是 Don Zagier 1990 年 发表在 The American Mathematical Monthly 97 上的证法. 在介绍 Don Zagier 的证明之前，我们先引入对合变换这一概念. 设 为非空集合，若变换…阅读全文​
 
-从线性变换的角度详解求微分方程特解的微分算子法 - Dedicatus1979的文章 - 知乎
+从线性变换的角度详解求微分方程特解的微分算子法 - Dedicatus1979的文章 - <br>
 https://zhuanlan.zhihu.com/p/2573371624
 
 一路有你:
 内容均为转载，仅为公益分亨，不要在网上寻医问药。可能会贻误病
 三国时，曹操身边有个著名谋士郭嘉，非常好色。 曹操女儿曹节曾这样当面讥讽他：每次出来带的女人都不一样。 同事陈群也当众吐槽过郭嘉，经常酗酒，然后酒后乱性。不少匿名同事向曹老板举报，让开除了郭嘉。 但由于郭嘉的聪明才智，曹老板表示：他是人才，就让他玩吧。 最终由于长期纵情声色，郭嘉年纪轻轻就染上了痨病，37岁英年早逝。 ——养怡之…阅读全文​
 
-高代老师说题出错了？没错！朱富海难题详解 - 柯西永远爱你的文章 - 知乎
+高代老师说题出错了？没错！朱富海难题详解 - 柯西永远爱你的文章 - <br>
 https://zhuanlan.zhihu.com/p/1899159611099051420
 
 柯西永远爱你:
 来看一个疑似错题的高代题 题目出自于朱富海的高代教材，这本书上有很多困难的钓鱼题（有的甚至不可做，是公开的），并且没有答案！！所以萌新谨慎入坑。如果你要刷这个书，建议你报班跟我们学，起码我这里可以解决…阅读全文​
 
-我好像懂了大道至简? - 東皇太一的回答 - 知乎
+我好像懂了大道至简? - 東皇太一的回答 - <br>
 https://www.zhihu.com/question/1897365280319058165/answer/1897587174297281041'
 
 東皇太一:
@@ -36,27 +36,27 @@ https://www.zhihu.com/question/1897365280319058165/answer/1897587174297281041'
 世人谓大道至简，未得证前，皆是小道似简 需证二点，其道可以曰大，其简可以曰至，否则其言不实，有亏阴德，将受天谴 极大者无外可延，至简者无内可分，不可颠倒梦想，妄言天数。不循本心，终有一劫，华而不实，必受其殃。…阅读全文​
 
 
-如何解读《周易》中的天人合一？ - 東皇太一的回答 - 知乎
+如何解读《周易》中的天人合一？ - 東皇太一的回答 - <br>
 https://www.zhihu.com/question/6250606688/answer/1897584157107926851
 
 東皇太一:
 至此天下，寰宇一统
 没苦硬吃，不善于道，有悖人伦阅读全文​
 
-真正的强者是什么样？ - 常世万法仙君的回答 - 知乎
+真正的强者是什么样？ - 常世万法仙君的回答 - <br>
 https://www.zhihu.com/question/510083715/answer/1894729906404955399
 
 常世万法仙君:
 中国海洋大学 农业硕士
 气运之子。 庄子曾经讲过一个寓言。 大意说一个人积极要求进步，结果在权力斗争中被处决，另一个人归隐山林，一心修身养性，自给自足，结果被山里的老虎吃了。 这个寓言，我的解读就是，任何策略，本质上都是在赌概率。 大家也都听过，各种抽烟喝酒九十九，保健养生三十七的故事。 话说回来，不是因为强者具备某些特质才成为强者，而是气运加身，某些…阅读全文​
 
-“道”不可言传的原因是什么？ - 東皇太一的回答 - 知乎
+“道”不可言传的原因是什么？ - 東皇太一的回答 - <br>
 https://www.zhihu.com/question/6975276411/answer/1897428593878995868
 
 東皇太一：至此天下，寰宇一统
 道乃天授，岂因人传？ 没有圣灵的指导，人间所传言语，皆是没有灵魂的噪音。…阅读全文​
 
-Faltings证明的Mordell猜想 - 最小作用量的文章 - 知乎
+Faltings证明的Mordell猜想 - 最小作用量的文章 - <br>
 https://zhuanlan.zhihu.com/p/5511231987
 
 最小作用量​:浮华而已 对代数数域K上亏格 的曲线，其K-点的个数是有限的（此即Mordell猜想，已被Faltings证明）。 Faltings的文章并不长，而其中最为主要的部分在于证明下面的定理： 定理（1） 对代数数域K和阿贝尔簇A/K，只有有限个阿贝尔簇B isogenous 于 A。 证明非常类似于 Mordell - Weil 定理证…阅读全文​
