--- a/text/挑战.md
+++ b/text/挑战.md
@@ -6,7 +6,7 @@
 https://www.zhihu.com/question/601884939/answer/1893333380961113192
 
 反派:
-有些人上<br>，只是给自己固有的偏见寻找支点和理由。
+有些人上知乎，只是给自己固有的偏见寻找支点和理由。
 我发现，我身边的穷人家出身的孩子，他们进步到一定程度之后，就会启动一个很神奇的心理机制，叫 “抑制发展” 很神奇。 第一个技术工就是这样的。他进部门之后干得很好，月薪一路从三千升到六升、升到八千、升到一万、一万二、一万五、一万八………… 当他工薪终于达到两万之后，不知道为什么，就开始一直犯错，直到退出项目。 两万，一般人是不…阅读全文​
 
 什么样的数学题解答方式可以称为天秀？ - 东城居士的回答 - <br>
