--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,11 @@
 
 最新 5.1：
 
+比考试比数学比赚钱比女人比智商比情商比说话比体育比家庭？
+
+谁和你比？我就和你比“比什么”的决定权。
+
+------
 为什么穷人的孩子很难成功？ - 反派的回答 <br>
 https://www.zhihu.com/question/601884939/answer/1893333380961113192
 
