--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,9 @@
 
 最新 5.1：
 
+接下来我和你比赞助，目前我收到的赞助是200，那是2021年我花了3个月写的没开源的代码不想写了，有人想要，我就让他转我200意思一下。你收到的赞助是多少？
+
+-------
 比考试比数学比赚钱比女人比智商比情商比说话比体育比家庭？
 
 谁和你比？我就和你比“比什么”的决定权。
