--- a/text/挑战.md
+++ b/text/挑战.md
@@ -7,6 +7,8 @@
 ------
 接下来我和你比赞助，目前我收到的赞助是200，那是2021年我花了3个月写的没开源的代码不想写了，有人想要，我就让他转我200意思一下。你收到的赞助是多少？
 
+对了，好像我也赞助过别人。那是小学时有一次在游戏厅，看一个同学打格斗游戏，玩的很好，快通关了，结果死了一次，没铜板了，我就把我剩下的最后一个铜板给他让他继续玩，其实我和他的关系也并不是很熟的那种。
+
 -------
 比考试比数学比赚钱比女人比智商比情商比说话比体育比家庭？
 
