--- a/text/挑战.md
+++ b/text/挑战.md
@@ -6,8 +6,12 @@
 
 萧十一郎之送割鹿刀回连家堡
 
+江建谊;周志华;周思贤 - 肝肠寸断
+
 萧十一郎之落日峰下 <br>
 https://5sing.kugou.com/bz/3187653.html
+
+江建谊;周志华;周思贤 - 花自飘零
 
 ------
 世上没有先知先觉，没有什么前知五百年，后知五百年的刘伯温。无非是多谋善断，留有余地。《三国志》里《郭嘉传》值得一读。郭嘉这个人足智多谋，初在袁绍麾下不得施展。他说袁绍“多端寡要，好谋无决，欲与共济天下大难”。就跑到曹操那里。曹操说他“每有大议，监敌制变。臣策未决，嘉辄成之。平定天下，谋功为高”。可惜中年夭折。曹操大哭。大跃进出点乱子，不要埋怨。否则就是“曹营之事不好办”。或者叫你“欲与共济天下大难！”
