--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,13 @@
 
 最新 5.1：
 
+萧十一郎之割鹿刀<br>
+https://5sing.kugou.com/bz/3187649.html
+
+萧十一郎之天心难测<br>
+https://5sing.kugou.com/bz/3234588.html
+
+------
 萧十一郎之悼妻碑
 
 萧十一郎之送割鹿刀回连家堡
