--- a/text/挑战.md
+++ b/text/挑战.md
@@ -1,7 +1,12 @@
 2025年挑战：逃避没用，不把最硬的骨头给啃下来，不可能研究出什么实质性的突破。
 
-最新 5.1：
+最新 5.2：
 
+沈璧君+李红袖+苏蓉蓉 vs 小兰+水仙+阿九
+
+小说：牛肉汤 vs 慕容九
+
+-------
 萧十一郎之割鹿刀<br>
 https://5sing.kugou.com/bz/3187649.html
 
