--- a/text/挑战.md
+++ b/text/挑战.md
@@ -8,6 +8,8 @@
 
 参赛：青青 白惜香+梅绛雪+蓝小蝶   丁灵琳 赵敏+丁珰+苗翠花
 
+说明：只取每个人物中最让人心动的某些瞬间参赛，所以不要揪着谁哪里哪里不好，比的是每个人最亮眼的闪光点。
+
 -------
 萧十一郎之割鹿刀<br>
 https://5sing.kugou.com/bz/3187649.html
