--- a/text/挑战.md
+++ b/text/挑战.md
@@ -1,7 +1,13 @@
 2025年挑战：逃避没用，不把最硬的骨头给啃下来，不可能研究出什么实质性的突破。
 
-最新 5.2：
+最新 5.3：
 
+决定是否为民科的应该是心态吧? - Yuhang Liu的回答 <br>
+https://www.zhihu.com/question/1901693164693230607/answer/1901992557875040324
+
+民科不会对数学构成威胁。能对数学构成威胁的人就不是民科。
+
+-------
 沈璧君+李红袖+苏蓉蓉 vs 小兰+水仙+阿九
 
 小说：牛肉汤 vs 慕容九
