--- a/text/挑战.md
+++ b/text/挑战.md
@@ -5,7 +5,7 @@
 决定是否为民科的应该是心态吧? - Yuhang Liu的回答 <br>
 https://www.zhihu.com/question/1901693164693230607/answer/1901992557875040324
 
-民科不会对数学构成威胁。能对数学构成威胁的人就不是民科。
+民科不会对数学构成威胁。能对数学产生威胁的人就不是民科。
 
 -------
 沈璧君+李红袖+苏蓉蓉 vs 小兰+水仙+阿九
