--- a/text/挑战.md
+++ b/text/挑战.md
@@ -2,6 +2,12 @@
 
 最新 5.3：
 
+随机变量的分布函数是不是也是一个随机变量？ - 范函子Skyline的回答 <br>
+https://www.zhihu.com/question/277548089/answer/1902070390467036143
+
+上帝不会掷骰子，不要告诉上帝怎么做。
+
+------
 决定是否为民科的应该是心态吧? - Yuhang Liu的回答 <br>
 https://www.zhihu.com/question/1901693164693230607/answer/1901992557875040324
 
